generated/manifests/prod-axon/media-network-policy/CiliumNetworkPolicy-allow-media-egress-bazarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-egress-bazarr
  namespace: media
spec:
  description: Allow bazarr to reach its in-namespace media targets.
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr
