generated/manifests/prod-axon/media-network-policy/CiliumNetworkPolicy-allow-media-egress-prowlarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-egress-prowlarr
  namespace: media
spec:
  description: Allow prowlarr to reach its in-namespace media targets.
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
      toPorts:
        - ports:
            - port: "8686"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: whisparr
      toPorts:
        - ports:
            - port: "6969"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: flaresolverr
      toPorts:
        - ports:
            - port: "8191"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
