generated/manifests/prod-axon/media-network-policy/CiliumNetworkPolicy-allow-media-egress-whisparr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-egress-whisparr
  namespace: media
spec:
  description: Allow whisparr to reach its in-namespace media targets.
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: whisparr
