generated/manifests/prod-axon/media-network-policy/CiliumNetworkPolicy-allow-media-ingress-flaresolverr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-ingress-flaresolverr
  namespace: media
spec:
  description: Allow in-namespace callers to reach flaresolverr:8191.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "8191"
              protocol: TCP
