generated/manifests/prod-axon/media-network-policy/CiliumNetworkPolicy-allow-media-ingress-lidarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-ingress-lidarr
  namespace: media
spec:
  description: Allow in-namespace callers + dashboards to reach lidarr:8686.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: glance
        - matchLabels:
            app.kubernetes.io/name: dash
        - matchLabels:
            app.kubernetes.io/name: unpackerr
        - matchLabels:
            app.kubernetes.io/name: configarr
      toPorts:
        - ports:
            - port: "8686"
              protocol: TCP
