generated/manifests/prod-axon/media-network-policy/CiliumNetworkPolicy-allow-media-ingress-radarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-ingress-radarr
  namespace: media
spec:
  description: Allow in-namespace callers + dashboards to reach radarr:7878.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: bazarr
        - matchLabels:
            app.kubernetes.io/name: glance
        - matchLabels:
            app.kubernetes.io/name: dash
        - matchLabels:
            app.kubernetes.io/name: unpackerr
        - matchLabels:
            app.kubernetes.io/name: profilarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
