generated/manifests/prod-axon/media-network-policy/CiliumNetworkPolicy-allow-media-ingress-whisparr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-ingress-whisparr
  namespace: media
spec:
  description: Allow in-namespace callers + dashboards to reach whisparr:6969.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: whisparr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: glance
        - matchLabels:
            app.kubernetes.io/name: dash
        - matchLabels:
            app.kubernetes.io/name: unpackerr
        - matchLabels:
            app.kubernetes.io/name: configarr
      toPorts:
        - ports:
            - port: "6969"
              protocol: TCP
